- change gros & second oeuvre display - add needed views

--- a/patbati/bati/templates/bati/demandetravaux_delete.html
+++ b/patbati/bati/templates/bati/demandetravaux_delete.html
@@ -3,7 +3,11 @@
 {% block content %}
 <div class="container mt-4">
     <h2>Supprimer la demande de travaux</h2>
-    <p>Êtes-vous sûr de vouloir supprimer cette demande de travaux ?</p>
+    <p>
+        Êtes-vous sûr de vouloir supprimer cette demande de travaux ?
+        <br>
+        <strong>Tous les travaux associés à cette demande seront également supprimés.</strong>
+    </p>
     <form method="post">
         {% csrf_token %}
         <button type="submit" class="btn btn-danger">Supprimer</button>
