--- a/patbati/bati/templates/bati/bati_detail_pdf.html
+++ b/patbati/bati/templates/bati/bati_detail_pdf.html
@@ -1,154 +1,172 @@
+{% load static %}
 
-{% block title %}
-  Fiche du bâtiment – {{ object.appelation }}
-{% endblock %}
+<link rel="stylesheet" href="{% static 'bati_detail_pdf.css' %}">
 
 {% block content %}
-<style>
-  body { font-family: "DejaVu Sans", sans-serif; }
-  h1, h2 { color: #333; }
-  table { width: 100%; border-collapse: collapse; margin-bottom: 1.5em; }
-  th, td { border: 1px solid #ddd; padding: 0.5em; text-align: left; }
-  th { background: #f7f7f7; width:25%; }
-  .section { margin-top: 2em; }
-</style>
 
-<h1>{{ object.appelation }}</h1>
+<h2>{{ object.appelation }}</h2>
 
+<h3>Renseignements</h3>
 <table>
-  <tr><th>Validé</th><td>{{ object.valide|yesno:"Oui,Non" }}</td></tr>
-  <tr><th>Classe architecturale</th><td>{{ object.classe }}</td></tr>
-  <tr><th>Implantation</th><td>{{ object.implantation }}</td></tr>
-  <tr><th>Faitage</th><td>{{ object.faitage }}</td></tr>
-  <tr><th>Secteur</th><td>{{ object.secteur }}</td></tr>
-  <tr><th>Exposition</th><td>{{ object.exposition }}</td></tr>
-  <tr><th>Altitude, X, Y</th><td>{{ object.altitude }} m, {{ object.x }}, {{ object.y }}</td></tr>
-  <tr><th>Dénivelé</th><td>{{ object.denivelle }}</td></tr>
-  <tr><th>Capacité</th><td>{{ object.capacite }}</td></tr>
-  <tr><th>Note patrimoniale</th><td>{{ object.notepatri }}</td></tr>
-  <tr><th>Patrimonialité</th><td>{{ object.patrimonialite }}</td></tr>
-  <tr><th>Conservation</th><td>{{ object.conservation }}</td></tr>
-  <tr><th>Masques</th><td>{{ object.masques.all|join:", " }}</td></tr>
-  <tr><th>Risques naturels</th><td>{{ object.risques_nat.all|join:", " }}</td></tr>
-  <tr><th>Commentaire masques</th><td>{{ object.commentaire_masque }}</td></tr>
-  <tr><th>Remarque générale</th><td>{{ object.remarque_generale }}</td></tr>
-  <tr><th>Date création / MAJ</th><td>{{ object.date_insert|date:"Y-m-d H:i" }} / {{ object.date_update|date:"Y-m-d H:i" }}</td></tr>
+  <tr><th>Nouveau numéro</th><td>{{ object.id }}</td></tr>
+  <tr><th>Ancien numéro</th><td>{{ object.ancien_index|default:"-" }}</td></tr>
+  <tr><th>Valeur patrimoniale</th><td>{{ object.notepatri }}</td></tr>
+  <tr><th>Patrimonialité</th><td>{{ object.patrimonialite|default:"-" }}</td></tr>
+  <tr><th>Classe d'architecture</th><td>{{ object.classe|default:"-" }}</td></tr>
+  <tr><th>Propriétaire</th><td>{{ object.proprietaire|default:"-" }}</td></tr>
+  <tr><th>Bâtiment en indivision</th><td>{{ object.indivision|yesno:"Oui,Non" }}</td></tr>
+  <tr><th>Règlementation</th>
+    <td>
+      {% for reg in object.protection.all %}
+        {{ reg.label }}{% if not forloop.last %}, {% endif %}
+      {% empty %}
+        Aucun règlement associé
+      {% endfor %}
+    </td>
+  </tr>
+  <tr><th>Capacité</th><td>{{ object.capacite|default:"-" }}</td></tr>
+  <tr><th>Date d'insertion</th><td>{{ object.date_insert|date:"d/m/Y" }}</td></tr>
+  <tr><th>Date de mise à jour</th><td>{{ object.date_update|date:"d/m/Y" }}</td></tr>
+  <tr><th>Bâtiment supprimé</th><td>{{ object.bat_suppr|yesno:"Oui,Non" }}</td></tr>
+  <tr><th>État général</th><td>{{ object.conservation }}</td></tr>
 </table>
 
-<div class="map-panel"></div>
+<h3>Géographie</h3>
+<table>
+  <tr><th>Secteur</th><td>{{ object.secteur }}</td></tr>
+  <tr><th>Lieu-dit</th><td>{{ object.lieu_dit }}</td></tr>
+  <tr><th>Cadastre</th><td>{{ object.cadastre }}</td></tr>
+  <tr><th>Coordonnée X</th><td>{{ object.x }}</td></tr>
+  <tr><th>Coordonnée Y</th><td>{{ object.y }}</td></tr>
+  <tr><th>Altitude</th><td>{{ object.altitude|default:"-" }}</td></tr>
+  <tr><th>Dénivelé</th><td>{{ object.denivelle|default:"-" }}</td></tr>
+</table>
 
+<h3>Liste des enquêtes</h3>
 {% if object.enquetes.exists %}
-  <div class="section">
-    <h2>Enquêtes</h2>
-    <table>
-      <tr><th>Date enquête</th><th>Personne</th><th>Date rédaction</th></tr>
-      {% for eq in object.enquetes.all %}
-      <tr>
-        <td>{{ eq.date_enquete|date:"Y-m-d" }}</td>
-        <td>{{ eq.personne }}</td>
-        <td>{{ eq.date_redaction|date:"Y-m-d" }}</td>
-      </tr>
-      {% endfor %}
-    </table>
-  </div>
-{% endif %}
-
-<h2>Structure, Gros et Second work in progress</h2>
-{% comment %} {% if object.demandes_travaux.exists %}
-  <div class="section">
-    <h2>Demandes de travaux</h2>
-    <table>
-      <tr><th>Date demande</th><th>Autorisation</th><th>Permis</th></tr>
-      {% for dem in object.demandes_travaux.all %}
-      <tr>
-        <td>{{ dem.date_demande_permis|date:"Y-m-d" }}</td>
-        <td>{{ dem.autorisation_p|yesno:"Oui,Non" }}</td>
-        <td>{{ dem.num_permis }} ({{ dem.date_permis|date:"Y-m-d" }})</td>
-      </tr>
-      {% endfor %}
-    </table>
-  </div>
-{% endif %}
-
-{% if object.structure.exists %}
-  <div class="section">
-    <h2>Structure</h2>
-    {% for struct in object.structure.all %}
-    <table>
-      <tr><th>Type</th><td>{{ struct.type }}</td></tr>
-      <tr><th>Matériaux principal</th><td>{{ struct.materiaux_principal }}</td></tr>
-      <tr><th>Conservation</th><td>{{ struct.conservation }}</td></tr>
-      <tr><th>Mise en œuvre</th><td>{{ struct.mise_en_oeuvre }}</td></tr>
-      <tr><th>Remarquable</th><td>{{ struct.est_remarquable|yesno:"Oui,Non" }}</td></tr>
-      <tr><th>Info structure</th><td>{{ struct.info_structure }}</td></tr>
-      {% if struct.finitions.exists %}
-        <tr><th>Finitions</th><td>
-          <ul>
-            {% for fin in struct.finitions.all %}
-              <li>{{ fin.materiaux_fin }} – {{ fin.finition }}</li>
-            {% endfor %}
-          </ul>
-        </td></tr>
-      {% endif %}
-    </table>
+<table>
+  <thead>
+    <tr>
+      <th>Enquêteur</th>
+      <th>Date de l'enquête</th>
+      <th>Date de rédaction</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for e in object.enquetes.all %}
+    <tr>
+      <td>{{ e.personne|default:"-" }}</td>
+      <td>{{ e.date_enquete|date:"d/m/Y" }}</td>
+      <td>{{ e.date_redaction|date:"d/m/Y" }}</td>
+    </tr>
     {% endfor %}
-  </div>
+  </tbody>
+</table>
+{% else %}
+<p>Aucune enquête renseignée.</p>
 {% endif %}
 
-{% if object.second_oeuvre.exists %}
-  <div class="section">
-    <h2>Second œuvre</h2>
-    {% for sec in object.second_oeuvre.all %}
-    <table>
-      <tr><th>Type</th><td>{{ sec.type }}</td></tr>
-      <tr><th>Conservation</th><td>{{ sec.conservation }}</td></tr>
-      <tr><th>Remarquable</th><td>{{ sec.est_remarquable|yesno:"Oui,Non" }}</td></tr>
-      <tr><th>Commentaire</th><td>{{ sec.commentaire }}</td></tr>
-      {% if sec.materiaux_fin.exists %}
-        <tr><th>Finitions</th><td>
-          <ul>
-            {% for fin in sec.materiaux_fin.all %}
-              <li>{{ fin }}</li>
-            {% endfor %}
-          </ul>
-        </td></tr>
-      {% endif %}
-    </table>
-    {% endfor %}
-  </div>
-{% endif %} {% endcomment %}
+<h3>État et perspectives</h3>
+<table>
+  <tr><th>État général</th><td>{{ object.conservation }}</td></tr>
+  <tr><th>Commentaires</th><td>{{ object.remarque_generale|default:"-" }}</td></tr>
+  <tr><th>Perspectives</th>
+    <td>
+      {% for p in object.perspective_set.all %}
+        {{ p.perspective }}{% if not forloop.last %}, {% endif %}
+      {% empty %}Aucune{% endfor %}
+    </td>
+  </tr>
+</table>
 
+
+<h3>Situation</h3>
+<table>
+  <tr><th>Implantation</th><td>{{ object.implantation }}</td></tr>
+  <tr><th>Faitage</th><td>{{ object.faitage }}</td></tr>
+  <tr><th>Situation géographique</th><td>{{ object.situation_geo }}</td></tr>
+  <tr><th>Exposition</th><td>{{ object.exposition }}</td></tr>
+  <tr><th>Pente</th><td>{{ object.pente }}</td></tr>
+</table>
+
+<h3>Contexte naturel</h3>
+<table>
+  <tr>
+    <th>Risques naturels</th>
+    <td>
+      {% for risque in object.risques_nat.all %}
+        {{ risque.label }}{% if not forloop.last %}, {% endif %}
+      {% empty %}
+        Aucun risque naturel
+      {% endfor %}
+    </td>
+  </tr>
+  <tr><th>Remarque risque naturel</th><td>{{ object.remarque_risque|default:"-" }}</td></tr>
+  <tr>
+    <th>Masques</th>
+    <td>
+      {% for masque in object.masques.all %}
+        {{ masque.label }}{% if not forloop.last %}, {% endif %}
+      {% empty %}
+        Aucun masque
+      {% endfor %}
+    </td>
+  </tr>
+  <tr><th>Commentaire masque</th><td>{{ object.commentaire_masque|default:"-" }}</td></tr>
+</table>
+
+<h3>Équipements</h3>
 {% if object.equipements.exists %}
-  <div class="section">
-    <h2>Équipements</h2>
-    <ul>
-      {% for eq in object.equipements.all %}
-        <li>{{ eq.type }} – {{ eq.conservation }}{% if eq.est_remarquable %} (Remarquable){% endif %}</li>
-      {% endfor %}
-    </ul>
-  </div>
+<table>
+  <thead>
+    <tr>
+      <th>Type</th>
+      <th>Conservation</th>
+      <th>Commentaire</th>
+      <th>Est remarquable</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for equipement in object.equipements.all %}
+    <tr>
+      <td>{{ equipement.type|default:"-" }}</td>
+      <td>{{ equipement.conservation|default:"-" }}</td>
+      <td>{{ equipement.commentaire|default:"-" }}</td>
+      <td>{{ equipement.est_remarquable|yesno:"Oui,Non" }}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+{% else %}
+<p>Aucun équipement associé.</p>
 {% endif %}
 
+<h3>Éléments paysagers</h3>
 {% if object.elements_paysagers.exists %}
-  <div class="section">
-    <h2>Éléments paysagers</h2>
-    <ul>
-      {% for el in object.elements_paysagers.all %}
-        <li>{{ el.type }} – {{ el.conservation }}{% if el.est_remarquable %} (Remarquable){% endif %}</li>
-      {% endfor %}
-    </ul>
-  </div>
+<table>
+  <thead>
+    <tr>
+      <th>Type</th>
+      <th>Conservation</th>
+      <th>Commentaire</th>
+      <th>Est remarquable</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for element in object.elements_paysagers.all %}
+    <tr>
+      <td>{{ element.type|default:"-" }}</td>
+      <td>{{ element.conservation|default:"-" }}</td>
+      <td>{{ element.commentaire|default:"-" }}</td>
+      <td>{{ element.est_remarquable|yesno:"Oui,Non" }}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+{% else %}
+<p>Aucun élément paysager associé.</p>
 {% endif %}
 
-{% if object.perspective_set.exists %}
-  <div class="section">
-    <h2>Perspectives</h2>
-    <ul>
-      {% for pers in object.perspective_set.all %}
-        <li>{{ pers.perspective }} – {{ pers.date|date:"Y-m-d" }}</li>
-      {% endfor %}
-    </ul>
-  </div>
-{% endif %}
+<div class="map-panel" style="margin-top: 2em;"></div>
 
 {% endblock %}
