- add type batiment - add filter

--- a/patbati/bati/templates/bati/bati_detail_attributes.html
+++ b/patbati/bati/templates/bati/bati_detail_attributes.html
@@ -23,6 +23,7 @@
             <tr><th>Classe d'architecture</th><td>{{ object.classe|default:"-" }}</td></tr>
             <tr><th>Propriétaire</th><td>{{ object.proprietaire|default:"-" }}</td></tr>
             <tr><th>Bâtiment en indivision</th><td>{{ object.indivision|yesno:"Oui,Non" }}</td></tr>
+            <tr><th>Type de batiment</th><td>{{ object.type_bat|default:"-" }}</td></tr>
             <tr>
               <th>Règlementation</th>
               <td>
