--- a/patbati/bati/templates/bati/bati_detail.html
+++ b/patbati/bati/templates/bati/bati_detail.html
@@ -23,6 +23,34 @@
 
 {% endblock %}
 
+
+{% block attachmentspanel %}
+
+<div class="mt-3">
+    <h5>Illustrations</h5>
+    <div class="row">
+        {% for img in object.illustrations.all %}
+        {% if img.fichier_src %}
+        <div class="col-md-4 mb-3">
+            <div class="card shadow-sm">
+                <img src="{{ img.fichier_src }}" class="card-img-top" alt="Illustration {{ forloop.counter }}">
+                <div class="card-body text-center">
+                    <small class="text-muted">{{ img.date }}</small><br>
+                    {% if img.auteur %}
+                    <small>Auteur : {{ img.auteur.prenom }} {{ img.auteur.nom }}</small>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+        {% endif %}
+        {% empty %}
+        <div class="col-12 text-muted">Aucune illustration associée.</div>
+        {% endfor %}
+    </div>
+</div>
+{{ block.super }}
+{% endblock attachmentspanel %}
+
 {% block before_attachments_extra_tab_content %}
 <div id="enq-pers" class="tab-pane">
     <div class="mb-3">
