--- a/patbati/bati/templates/bati/bati_detail.html
+++ b/patbati/bati/templates/bati/bati_detail.html
@@ -1,5 +1,6 @@
 {% extends "mapentity/mapentity_detail.html" %}
 
+{% load crispy_forms_tags %}
 
 {% block before_attachments_extra_tab_nav %}
 <li class="nav-item">
@@ -30,24 +31,35 @@
     <h5>Illustrations</h5>
     <div class="row">
         {% for img in object.illustrations.all %}
-        {% if img.fichier_src %}
-        <div class="col-md-4 mb-3">
-            <div class="card shadow-sm">
-                <img src="{{ img.fichier_src }}" class="card-img-top" alt="Illustration {{ forloop.counter }}">
-                <div class="card-body text-center">
-                    <small class="text-muted">{{ img.date }}</small><br>
-                    {% if img.auteur %}
-                    <small>Auteur : {{ img.auteur.prenom }} {{ img.auteur.nom }}</small>
-                    {% endif %}
+            {% if img.fichier_src %}
+            <div class="col-md-4 mb-3">
+                <div class="card shadow-sm">
+                    <img src="{{ img.fichier_src.url }}" class="card-img-top" alt="Illustration {{ forloop.counter }}">
+                    <div class="card-body text-center">
+                        <small class="text-muted">{{ img.date }}</small><br>
+                        {% if img.auteur %}
+                            <small>Auteur : {{ img.auteur.prenom }} {{ img.auteur.nom }}</small>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
-        </div>
-        {% endif %}
+            {% endif %}
         {% empty %}
-        <div class="col-12 text-muted">Aucune illustration associée.</div>
+        <div class="col-12 text-muted">
+            Aucune illustration pour ce bâtiment.
+        </div>
         {% endfor %}
     </div>
 </div>
+
+<div class="mt-4">
+    <h5>Ajouter une illustration</h5>
+    <form method="post" enctype="multipart/form-data" action="{% url 'bati:illustration_add' parent_pk=object.pk %}">
+        {% csrf_token %}
+        {% crispy form %}
+    </form>
+</div>
+
 {{ block.super }}
 {% endblock attachmentspanel %}
 
