--- a/patbati/bati/templates/bati/bati_detail.html
+++ b/patbati/bati/templates/bati/bati_detail.html
@@ -28,14 +28,15 @@
 {% block attachmentspanel %}
 
 <div class="mt-3">
-    <h5>Illustrations</h5>
+    <h3>Illustrations</h3>
     <div class="row">
         {% for img in object.illustrations.all %}
             {% if img.fichier_src %}
             <div class="col-md-4 mb-3">
                 <div class="card shadow-sm">
-                    <img src="{{ img.fichier_src }}" class="card-img-top" alt="Illustration {{ forloop.counter }}">
+                    <img src="{{ img.fichier_src.url }}" class="card-img-top" alt="{{ img.type }}">
                     <div class="card-body text-center">
+                        <p> Type d'illustration: {{ img.type }}</p>
                         <small class="text-muted">{{ img.date }}</small><br>
                         {% if img.auteur %}
                             <small>Auteur : {{ img.auteur }} </small>
